MDEV-11552 Queries executed by event scheduler are written to slow log incorrectly or not written at all

because thd->update_server_status() is used to measure the query time
for the slow log (not only to set protocol level flags),
it needs to be called also when the server isn't going to send
anything to the client.